[project]
name = "c1tools"
version = "0.1.0"
description = "A collection of tools for my personal use"
readme = "README.md"
authors = [
    { name = "Colin Prokopowicz", email = "44371364+Colnup@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = ["typer>=0.17.4"]

[project.scripts]
c1 = "c1tools.cli:app"

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.12.12"]


[tool.ruff.lint]
# select = ["E4", "E7", "E9", "F", "Q"]
select = [
    "E",
    # "E4",
    # "E7",
    # "E9",
    "F",
    "Q",
    "YTT",
    "ANN",
    # "ASYNC",
    "BLE",
    "PERF",
]


[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
